Added Contact, Corrected Small
Signed-off-by: Emmanuel Olowosulu <eolowo@unilag.edu.ng>

--- a/index.html
+++ b/index.html
@@ -92,7 +92,29 @@
                         <div class="home-content">
                             <div class="home-text">
 
-                                <h1 class="hs-line-8 no-transp font-alt mb-50 mb-xs-30">We are small and <strong>peppery-hot</strong> and deeply involved and fully devoted</h1>
+                                <h2 class="hs-line-14 font-alt mb-50 mb-xs-30">
+                                  We Work in Partnership &amp; Collaboration with the 4 Biggest Media Independents:
+                                </h2>
+
+                                <h1 class="hs-line-8 no-transp font-alt mb-50 mb-xs-30">
+                                  Media Reach (OMD)<br>All Seasons Mediacom<br>Media Fuse<br>Media Perspectives
+                                </h1>
+
+                            </div>
+                        </div>
+                        <!-- End Hero Content -->
+
+                    </div>
+                    <!-- End Slide Item -->
+
+                    <!-- Slide Item -->
+                    <div class="js-height-full container">
+
+                        <!-- Hero Content -->
+                        <div class="home-content">
+                            <div class="home-text">
+
+                                <h1 class="hs-line-8 no-transp font-alt mb-50 mb-xs-30">We are &amp; <strong>peppery-hot</strong> &amp; deeply involved &amp; fully devoted</h1>
 
                                 <h2 class="hs-line-14 font-alt mb-50 mb-xs-30">Fax Media Ltd.</h2>
 
@@ -378,7 +400,7 @@
                                     <div class="col-md-4 mb-md-40 mb-xs-30">
                                         <blockquote class="mb-0">
                                             <p>
-                                                Being a smal tag team of highly experienced and capable media professionals,
+                                                Being a small tag team of highly experienced and capable media professionals,
                                                 we provide value added services to out client&apos;s media buys (Electronic &amp; Print Media)
                                             </p>
                                             <footer>
@@ -622,9 +644,11 @@
                                             Call Us
                                         </div>
                                         <div class="ci-text">
-                                            0802-3023729<br>
-                                            0805-8448242<br>
-                                            0809-6663729
+                                          0802-3023729<br>
+                                          0805-8448242<br>
+                                          0809-6663729<br>                                          
+                                          Samuel Oladimeji:<br>08099242498, 08029189665<br>
+                                          Sanusi Nurudeen:<br>08033753726, 08099110780<br>
                                         </div>
                                     </div>
                                 </div>
